# serializer version: 1
# name: test_calendar[t0]
  '今天是 1919 年 8 月 10 日星期日，己未年七月十五日曜日，还有 14 天处暑。'
# ---
# name: test_calendar[t1]
  '今天是 1979 年 1 月 20 日星期六，戊午年腊月廿二土曜日，还有 1 天大寒。'
# ---
# name: test_calendar[t2]
  '今天是 2021 年 12 月 21 日星期二，辛丑年冬月十八火曜日，冬至。'
# ---
